# data-engineering-pipeline-with-ClaudeCode

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: app.py
backend/: db.py  ingest.py  models.py  pipeline.py
backend/sql/: create_raw_events.sql
data/: sample.csv
tests/: test_ingest.py
